# raylib-walls

./: .gitignore  CMakeLists.txt  README.md  build_tests.sh  main.cpp
assets/models/brick/: license.txt  scene.gltf
include/core/: colored_wall.h  custom_camera.h  draw_utils.h  managed_texture.h  textured_wall.h  textured_wall_rec.h  wall.h  wall_handler.h
include/ecs/: components.h  entity_utils.h  registry.h  systems.h
include/render/: draw_utils.h
include/textures/: managed_texture.h
include/world/: anchor.h  doorway.h  hallway.h  room.h
src/: main.cpp
src/core/: colored_wall.cpp  draw_utils.cpp  textured_wall.cpp  textured_wall_rec.cpp  wall.cpp  wall_handler.cpp
src/render/: draw_utils.cpp
tests/: test_ecs.cpp
